# zeitgeist

./: .dockerignore  .gitignore  .gitleaks.toml  .grype.yaml  .hadolint.yml  .mergify.yml  .npmrc  .prettierrc.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HEADER_GPL3  Makefile  README.md  deny.toml  file_header.txt  output  package-lock.json  rust-toolchain  rustfmt.toml  taplo.toml  types.json  zeitgeist.md  zeitgeist_spec.json
bonding-curve/: Cargo.toml
bonding-curve/src/: lib.rs  mock.rs  tests.rs
node/: Cargo.toml  build.rs
node/res/: battery_station_relay.json  bp.json  bp_parachain.json  bs.json  bs_parachain.json  raumgeist.json  raumgeist_parachain.json  zeitgeist.json  zeitgeist_parachain.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  inherents.rs  lib.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: additional_chain_spec.rs  battery_park.rs  battery_station.rs  dev.rs  local_testnet.rs  mod.rs  raumgeist.rs  zeitgeist.rs
node/src/cli/: cli_parachain.rs  cli_standalone.rs
node/src/service/: service_parachain.rs  service_standalone.rs
one-way-channels/: Cargo.toml
one-way-channels/src/: tests.rs
primitives/: Cargo.toml
primitives/src/: asset.rs  assets.rs  balance_info.rs  checked_ops_res.rs  constants.rs  fixed.rs  hybrid_router_api_types.rs  lib.rs  macros.rs  market.rs  market_type.rs  max_runtime_usize.rs  max_usize.rs  order_book.rs  orderbook.rs  outcome.rs  outcome_report.rs  pool.rs  pool_status.rs  proxy_type.rs  serde_wrapper.rs  swaps.rs  traits.rs  types.rs  utils.rs  zeitgeist_currencies_extension.rs  zeitgeist_multi_reservable_currency.rs  ztg.rs
primitives/src/assets/: all_assets.rs  campaign_assets.rs  currencies.rs  custom_assets.rs  market_assets.rs  subsets.rs  tests.rs
primitives/src/constants/: base_multiples.rs  mock.rs  ztg.rs
primitives/src/math/: check_arithm_rslt.rs  checked_ops_res.rs  consts.rs  fixed.rs  mod.rs  root.rs
primitives/src/traits/: assets.rs  combinatorial_tokens_api.rs  combinatorial_tokens_benchmark_helper.rs  combinatorial_tokens_fuel.rs  combinatorial_tokens_unsafe_api.rs  complete_set_operations_api.rs  deploy_pool_api.rs  dispute_api.rs  distribute_fees.rs  futarchy_benchmark_helper.rs  futarchy_oracle.rs  hybrid_router_amm_api.rs  hybrid_router_orderbook_api.rs  market_builder.rs  market_commons_pallet_api.rs  market_id.rs  market_transition_api.rs  payout_api.rs  swaps.rs  weights.rs  zeitgeist_asset.rs  zeitgeist_multi_reservable_currency.rs
primitives/src/types/: multi_hash.rs  primitive_market_builder.rs  result_with_weight_info.rs  type_aliases.rs  xcm_metadata.rs
runtime/: Cargo.toml  build.rs
runtime/battery-station/: Cargo.toml  build.rs
runtime/battery-station/src/: lib.rs  parachain_params.rs  parameters.rs  xcm_config.rs
runtime/common/: Cargo.toml
runtime/common/src/: fees.rs  lib.rs  relay_timestamp.rs
runtime/raumgeist/: Cargo.toml
runtime/raumgeist/src/: lib.rs  parachain_params.rs
runtime/src/: constants.rs  lib.rs  opaque.rs  parachain_params.rs  parameters.rs  txfilter.rs  xcm_config.rs  xcmp_message.rs
runtime/src/battery_station/: mod.rs  parachain_params.rs
runtime/src/benchmarking/: currencies.rs  mod.rs  tokens.rs  utils.rs
runtime/src/common/: mod.rs  opaque.rs  parameters.rs
runtime/src/tests/: mod.rs  multiplier.rs
runtime/src/weights/: cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  orml_currencies.rs  orml_tokens.rs  pallet_author_mapping.rs  pallet_author_slot_filter.rs  pallet_balances.rs  pallet_collective.rs  pallet_democracy.rs  pallet_grandpa.rs  pallet_identity.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs  parachain_staking.rs
runtime/src/xcm_config/: fees.rs
runtime/src/zeitgeist/: mod.rs  parameters.rs
runtime/zeitgeist/: Cargo.toml  build.rs
runtime/zeitgeist/src/: lib.rs  parachain_params.rs  parameters.rs
traits/: Cargo.toml
traits/src/: shares.rs
utils/: Cargo.toml
utils/src/: lib.rs
zrml/asset-router/: Cargo.toml  README.md
zrml/asset-router/src/: lib.rs  macros.rs  mock.rs  tests.rs  types.rs
zrml/authorized/: Cargo.toml  README.md
zrml/authorized/src/: authorized_pallet_api.rs  benchmarks.rs  lib.rs  migrations.rs  mock.rs  mock_storage.rs  tests.rs  utils.rs  weights.rs
zrml/bonding-curve/: Cargo.toml
zrml/bonding-curve/src/: lib.rs  tests.rs
zrml/combinatorial-tokens/: Cargo.toml  README.md
zrml/combinatorial-tokens/fuzz/: Cargo.toml  common.rs  merge_position.rs  redeem_position.rs  split_position.rs
zrml/combinatorial-tokens/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
zrml/combo/: Cargo.toml
zrml/combo/src/: alt_bn128.rs  lib.rs
zrml/court/: Cargo.toml  README.md
zrml/court/src/: benchmarks.rs  court_pallet_api.rs  juror.rs  juror_status.rs  lib.rs  migrations.rs  mock.rs  mock_storage.rs  resolution_counters.rs  tests.rs  traits.rs  types.rs  weights.rs
zrml/currencies/: Cargo.toml
zrml/currencies/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  weights.rs
zrml/futarchy/: Cargo.toml  README.md
zrml/futarchy/fuzz/: Cargo.toml  submit_proposal.rs
zrml/futarchy/src/: benchmarking.rs  dispatchable_impls.rs  lib.rs  pallet_impls.rs  proposal_storage.rs  weights.rs
zrml/global-disputes/: Cargo.toml  README.md
zrml/global-disputes/src/: benchmarks.rs  global_disputes_pallet_api.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  utils.rs  weights.rs
zrml/hybrid-router/: Cargo.toml  README.md
zrml/hybrid-router/src/: benchmarking.rs  lib.rs  mock.rs  types.rs  utils.rs  weights.rs
zrml/liquidity-mining/: Cargo.toml  README.md
zrml/lsd-lmsr/: Cargo.toml
zrml/lsd-lsmr/: Cargo.toml
zrml/market-commons/: Cargo.toml  README.md
zrml/neo-swaps/: Cargo.toml  README.md
zrml/one-way-channels/: Cargo.toml
zrml/orderbook/: Cargo.toml  README.md
zrml/orderbook-v1/: Cargo.toml  README.md
zrml/orderbook-v2/: Cargo.toml  README.md
(+690 files in other folders)
