[workspace]
default-members = [
    "node",
    "primitives",
    "runtime/common",
    "runtime/battery-station",
    "runtime/zeitgeist",
    "zrml/authorized",
    "zrml/court",
    "zrml/global-disputes",
    "zrml/liquidity-mining",
    "zrml/market-commons",
    "zrml/orderbook-v1",
    "zrml/prediction-markets",
    "zrml/prediction-markets/runtime-api",
    "zrml/rikiddo",
    "zrml/simple-disputes",
    "zrml/swaps",
    "zrml/swaps/rpc",
    "zrml/swaps/runtime-api",
    "zrml/styx",
]
members = [
    "node",
    "primitives",
    "runtime/common",
    "runtime/battery-station",
    "runtime/zeitgeist",
    "zrml/authorized",
    "zrml/court",
    "zrml/global-disputes",
    "zrml/liquidity-mining",
    "zrml/market-commons",
    "zrml/orderbook-v1",
    "zrml/orderbook-v1/fuzz",
    "zrml/prediction-markets",
    "zrml/prediction-markets/fuzz",
    "zrml/prediction-markets/runtime-api",
    "zrml/rikiddo",
    "zrml/rikiddo/fuzz",
    "zrml/simple-disputes",
    "zrml/swaps",
    "zrml/swaps/fuzz",
    "zrml/swaps/rpc",
    "zrml/swaps/runtime-api",
    "zrml/styx",
]
resolver = "2"
# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.

[workspace.dependencies]
# Dependencies are split into 2 groups: wasm and client.
# - "wasm" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# Cumulus / Nimbus (client)
cumulus-client-cli = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-client-collator = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-client-consensus-common = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-client-consensus-relay-chain = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-client-network = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-client-service = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-primitives-parachain-inherent = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-relay-chain-inprocess-interface = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-relay-chain-interface = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-relay-chain-minimal-node = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
cumulus-relay-chain-rpc-interface = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/cumulus" }
nimbus-consensus = { git = "https://github.com/zeitgeistpm/external" }

# Cumulus / Nimbus (wasm)
cumulus-pallet-dmp-queue = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
cumulus-pallet-parachain-system = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
cumulus-pallet-xcm = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
cumulus-pallet-xcmp-queue = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
cumulus-primitives-core = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
cumulus-primitives-timestamp = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
cumulus-primitives-utility = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
nimbus-primitives = { default-features = false, git = "https://github.com/zeitgeistpm/external" }
pallet-author-inherent = { default-features = false, git = "https://github.com/zeitgeistpm/external" }
pallet-author-slot-filter = { default-features = false, git = "https://github.com/zeitgeistpm/external" }
parachain-info = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/cumulus" }
session-keys-primitives = { default-features = false, git = "https://github.com/zeitgeistpm/external" }

# Moonbeam (client)
moonbeam-vrf = { git = "https://github.com/zeitgeistpm/external" }

# Moonbeam (wasm)
pallet-author-mapping = { default-features = false, git = "https://github.com/zeitgeistpm/external" }
pallet-parachain-staking = { default-features = false, git = "https://github.com/zeitgeistpm/external" }

# ORML (wasm)
orml-asset-registry = { branch = "polkadot-v0.9.32", default-features = false , git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-benchmarking = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-currencies = { branch = "polkadot-v0.9.32", default-features = false , git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-traits = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-tokens = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-unknown-tokens = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-xcm-support = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-xtokens = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library" }

# Substrate (client)
frame-benchmarking-cli = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate"}
pallet-transaction-payment-rpc = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-chain-spec = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-cli = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-client-api = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-consensus = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-executor = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-keystore = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-network = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-network-common = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-rpc = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-service = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-sysinfo = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-telemetry = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-tracing = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-consensus = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-keyring = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-keystore = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-storage = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
sp-trie = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
substrate-build-script-utils = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
substrate-prometheus-endpoint = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
substrate-wasm-builder = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
try-runtime-cli = { branch = "polkadot-v0.9.32", git = "https://github.com/paritytech/substrate" }
xcm-emulator = { rev = "158a6bd2768c679563efa891aa17329635b2764b", git = "https://github.com/shaunxw/xcm-simulator" }

# Substrate (wasm)
frame-benchmarking = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-executive = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-benchmarking = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-try-runtime = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-aura = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-asset-tx-payment = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-bounties = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-collective = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-contracts-primitives = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-democracy = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-identity = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-membership = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-multisig = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-preimage = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-proxy = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.32", default-features = false , git = "https://github.com/paritytech/substrate" }
pallet-scheduler = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-treasury = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-utility = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-vesting = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
parity-scale-codec = { default-features = false, version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false }
sp-api = { branch = "polkadot-v0.9.32", default-features = false , git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-arithmetic = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.32", default-features = false , git = "https://github.com/paritytech/substrate" }
sp-offchain = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { branch = "polkadot-v0.9.32", default-features = false, git = "https://github.com/paritytech/substrate" }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false  }

# Polkadot / XCM (client)
polkadot-cli = { workspace = true }
polkadot-service = { workspace = true }
polkadot-test-service = { workspace = true }

# Polkadot / XCM (wasm)
pallet-xcm = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
polkadot-parachain = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
polkadot-primitives = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
polkadot-runtime = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
polkadot-runtime-parachains = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
rococo-runtime = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
xcm = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
xcm-builder = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }
xcm-executor = { branch = "release-v0.9.32", default-features = false, git = "https://github.com/paritytech/polkadot" }

# Zeitgeist (client)
battery-station-runtime = { path = "runtime/battery-station" }
zeitgeist-runtime = { path = "runtime/zeitgeist" }
zrml-prediction-markets-fuzz = { path = "zrml/prediction-markets/fuzz" }
zrml-rikiddo-fuzz = { path = "zrml/rikkido/fuzz" }
zrml-swaps-fuzz = { path = "zrml/swaps/fuzz" }

# Zeitgeist (wasm)
common-runtime = { path = "runtime/battery-station", default-features = false }
zeitgeist-primitives = { path = "primitives", default-features = false }
zrml-authorized = { path = "zrml/authorized", default-features = false }
zrml-court = { path = "zrml/court", default-features = false }
zrml-global-disputes = { path = "zrml/global-disputes", default-features = false }
zrml-liquidity-mining = { path = "zrml/liquidity-mining", default-features = false }
zrml-market-commons = { path = "zrml/market-commons", default-features = false }
zrml-orderbook-v1 = { path = "zrml/orderbook-v1", default-features = false }
zrml-prediction-markets = { path = "zrml/prediction-markets", default-features = false }
zrml-prediction-markets-runtime-api = { path = "zrml/prediction-markets/runtime-api", default-features = false }
zrml-rikiddo = { path = "zrml/prediction-markets", default-features = false }
zrml-simple-disputes = { path = "zrml/simple-disputes", default-features = false }
zrml-styx = { path = "zrml/styx", default-features = false }
zrml-swaps = { path = "zrml/swaps", default-features = false }
zrml-swaps-rpc = { path = "zrml/swaps/rpc", default-features = false }
zrml-swaps-runtime-api = { path = "zrml/swaps/runtime-api", default-features = false }

# Other (client)
clap = "4.0.9"
jsonrpsee = "0.15.1"
libfuzzer-sys = "0.4"
more-asserts = "0.2"
test-case = "2.0.2"
url = "2.2.2"

# Other (wasm)
arbitrary = { default-features = false, version = "1.0" }
arrayvec = { default-features = false, version = "0.7" }
cfg-if = { workspace = true, default-features = false }
hashbrown = { default-features = true, version = "0.11" }
hex-literal = { default-features = false, version = "0.3.4" }
log = { version = "0.4.18", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
rand = { default-features = false, version = "0.8.4" }
serde = { default-features = false, version = "1.0.144" }

[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.production]
codegen-units = 1
incremental = false
inherits = "release"
lto = true

[profile.release]
opt-level = 3
# Zeitgeist runtime requires unwinding.
panic = "unwind"

[patch."https://github.com/paritytech/polkadot"]
pallet-xcm = { workspace = true }
polkadot-cli = { workspace = true }
polkadot-client = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-node-core-av-store = { workspace = true }
polkadot-node-network-protocol = { workspace = true }
polkadot-node-primitives = { workspace = true }
polkadot-node-subsystem = { workspace = true }
polkadot-node-subsystem-util = { workspace = true }
polkadot-overseer = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
polkadot-service = { workspace = true }
polkadot-test-service = { workspace = true }
rococo-runtime = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
